fix headers with horizontal scrolling

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100svh;
+    width: fit-content;
     margin: 0;
 }
 
@@ -28,6 +29,7 @@ body {
     align-items: center;
 
     padding: 0 16px;
+    width: 100%;
 }
 
 .main-logo {
@@ -43,6 +45,7 @@ body {
 
 .main {
     flex: 1;
+    width: fit-content;
 }
 
 .main-footer {
@@ -51,6 +54,7 @@ body {
     flex: 0 40px;
 
     padding: 0 16px;
+    width: 100%;
 }
 
 textarea {
